Remove unresponsive javascript files.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand custom_navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+                                <a class="navbar-brand custom_navbar-brand" href="#"><img src="img/tree.png" alt=""></a>
                             </div>
                             <!--End of navbar-header-->
 
@@ -93,11 +93,11 @@
                                 <ul class="nav navbar-nav navbar-right main_menu">
                                     <li class="active"><a href="#header">Home <span class="sr-only">(current)</span></a></li>
                                     <li><a href="#welcome">about</a></li>
-                                    <li><a href="#portfolio">project</a></li>
-                                    <li><a href="#counter">achivment</a></li>
-                                    <li><a href="#event">event</a></li>
-                                    <li><a href="#testimonial">testimonial</a></li>
-                                    <li><a href="#blog">blog</a></li>
+                                    <li><a href="#portfolio">Our services</a></li>
+                                    <li><a href="#counter">our partners</a></li>
+                                    <li><a href="#event">our technologies</a></li>
+                                    <li><a href="#testimonial">resources</a></li>
+                                    <li><a href="#blog">join us</a></li>
                                     <li><a href="#contact">contact us</a></li>
                                 </ul>
                             </div>
@@ -941,7 +941,7 @@
 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>-->
+        <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
         <script src="js/jquery-1.12.3.min.js"></script>
 
         <!--Counter UP Waypoint-->
@@ -958,7 +958,7 @@
         </script>
 
         <!--Gmaps-->
-        <script src="js/gmaps.min.js"></script>
+        <!-- <script src="js/gmaps.min.js"></script>
         <script type="text/javascript">
             var map;
             $(document).ready(function () {
@@ -998,17 +998,17 @@
                     }
                 });
             });
-        </script>
+        </script> -->
         <!--Google Maps API-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxvF9oTfcziZWw--3phPVx1ztAsyhXL4"></script>
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxvF9oTfcziZWw--3phPVx1ztAsyhXL4"></script> -->
 
 
         <!--Isotope-->
-        <script src="js/isotope/min/scripts-min.js"></script>
+        <!-- <script src="js/isotope/min/scripts-min.js"></script>
         <script src="js/isotope/cells-by-row.js"></script>
         <script src="js/isotope/isotope.pkgd.min.js"></script>
         <script src="js/isotope/packery-mode.pkgd.min.js"></script>
-        <script src="js/isotope/scripts.js"></script>
+        <script src="js/isotope/scripts.js"></script> -->
 
 
         <!--Back To Top-->
