--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>BlayBerg</title>
 
         <!--    Google Fonts-->
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Poor+Story' rel='stylesheet' type='text/css'>
 
         <!--Fontawesome-->
         <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -84,7 +84,9 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand custom_navbar-brand" href="#"><img src="img/tree.png" alt=""></a>
+                                <a class="navbar-brand custom_navbar-brand" href="#">
+                                  <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">BLAYBERG</h3>
+                                </a>
                             </div>
                             <!--End of navbar-header-->
 
@@ -132,9 +134,10 @@
                             <img src="img/img1.jpg" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>Protect</h3>
-                                    <h2>nature the environment</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <h2>Our Mission</h2>
+                                    <p style="line-height:2.0em">Our desire is to foster a vibrant rural economy driven by
+                											value-added agriculture by creating and facilitating the development of value added Agricultural
+                										businesses</p>
                                     <a href="" class="custom_btn">Read  More</a>
                                 </div>
                             </div>
@@ -146,9 +149,10 @@
                             <img src="img/img2.jpg" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>Protect</h3>
-                                    <h2>nature the environment</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <h2>Our Vision</h2>
+                                    <p style="line-height:2.0em">To improve economic livelihoods of the households we serve by reducing
+                                      the cost of agricultural production by more than 50% and
+                                    by improving production by more than 70%</p>
                                     <a href="" class="custom_btn">Read  More</a>
                                 </div>
                             </div>
@@ -160,9 +164,9 @@
                             <img src="img/img3.jpg" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>Protect</h3>
-                                    <h2>nature the environment</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <h2>Our Values</h2>
+                                    <p style="line-height:2.0em">We are <mark>committed</mark> to <mark>delivering value</mark> through
+                                      <mark>innovative solutions</mark> and <mark>partnerships</mark></p>
                                     <a href="" class="custom_btn">Read  More</a>
                                 </div>
                             </div>
@@ -1004,11 +1008,11 @@
 
 
         <!--Isotope-->
-        <!-- <script src="js/isotope/min/scripts-min.js"></script>
+        <script src="js/isotope/min/scripts-min.js"></script>
         <script src="js/isotope/cells-by-row.js"></script>
         <script src="js/isotope/isotope.pkgd.min.js"></script>
         <script src="js/isotope/packery-mode.pkgd.min.js"></script>
-        <script src="js/isotope/scripts.js"></script> -->
+        <script src="js/isotope/scripts.js"></script>
 
 
         <!--Back To Top-->
