Add home page with descriptions for core values.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <!--End of item With Active-->
                     <div class="item">
                         <div class="slider_overlay">
-                            <img src="img/img2.jpg" alt="...">
+                            <img src="img/land.jpg" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
                                     <h2>Our Vision</h2>
@@ -187,8 +187,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="wel_header">
-                            <h2>welcome to green fair</h2>
-                            <p>Our Green Fire Organization is one of the non profit organization near you. Get our services like</p>
+                            <h2>What drives us?</h2>
+                            <p>At BlayBerg, our desire is to provide maximum value to everyone we do business with.</p>
                         </div>
                     </div>
                 </div>
@@ -201,8 +201,10 @@
                                     <div class="welcome_icon">
                                         <i class="fa fa-leaf"></i>
                                     </div>
-                                    <h4>eco system</h4>
-                                    <p>Lorem ipsum dolor sit amet, eu qui modo expetendis reformidans ex sit set appetere sententiae seo eum in simul homero.</p>
+                                    <h4>Innovative Solutions</h4>
+                                    <p>We believe that innovative solutions are the key to economic freedom and
+                                    a sustainable future. We strive to build solutions that positively impact the livelihoods
+                                    of those we serve. </p>
                                 </div>
                             </div>
                         </div>
@@ -215,8 +217,9 @@
                                     <div class="welcome_icon">
                                         <i class="fa fa-refresh"></i>
                                     </div>
-                                    <h4>recycling</h4>
-                                    <p>Lorem ipsum dolor sit amet, eu qui modo expetendis reformidans ex sit set appetere sententiae seo eum in simul homero.</p>
+                                    <h4>Commitment</h4>
+                                    <p>We are committed to a sustainable future for our future generations. We are committed to changing the lives
+                                    of millions through our products and we are committed to providing quality service.</p>
                                 </div>
                             </div>
                         </div>
@@ -229,8 +232,8 @@
                                     <div class="welcome_icon">
                                         <i class="fa fa-tint"></i>
                                     </div>
-                                    <h4>water refine</h4>
-                                    <p>Lorem ipsum dolor sit amet, eu qui modo expetendis reformidans ex sit set appetere sententiae seo eum in simul homero.</p>
+                                    <h4>Partnerships</h4>
+                                    <p>We believe in partnerships and teamwork.</p>
                                 </div>
                             </div>
                         </div>
@@ -243,8 +246,9 @@
                                     <div class="welcome_icon">
                                         <i class="fa fa-cog"></i>
                                     </div>
-                                    <h4>solar system</h4>
-                                    <p>Lorem ipsum dolor sit amet, eu qui modo expetendis reformidans ex sit set appetere sententiae seo eum in simul homero.</p>
+                                    <h4>Value</h4>
+                                    <p>Through our products and services, we aim to provide maximum value to our clients,
+                                    business partners and stakeholders.</p>
                                 </div>
                             </div>
                         </div>
