Modified javascript and css files.

--- a/bkup.html
+++ b/bkup.html
@@ -1,4 +1,37 @@
-
+<!--End of col-md-2-->
+<div class="colum">
+  <div class="container">
+    <div class="row">
+      <form action="/">
+        <ul id="portfolio_menu" class="menu portfolio_custom_menu">
+          <li>
+            <button data-filter="*" class="my_btn btn_active">Show All</button>
+          </li>
+          <li>
+            <button data-filter=".blue, .black, .green" class="my_btn">environment</button>
+          </li>
+          <li>
+            <button data-filter=".red, .green" class="my_btn">climate</button>
+          </li>
+          <li>
+            <button data-filter=".blue, .yellow, .black" class="my_btn">photography</button>
+          </li>
+          <li>
+            <button data-filter=".black" class="my_btn">species</button>
+            <!--
+                            </li>
+                            <li>
+                                <button data-filter=".black" class="my_btn">Black</button>
+                            </li>
+                                -->
+        </ul>
+        <!--End of portfolio_menu-->
+      </form>
+      <!--End of Form-->
+    </div>
+    <!--End of row-->
+  </div>
+  <!--End of container-->
 <!--end of portfolio-->
 <!--Start of welcome section-->
 <section id="welcome">
