--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
                 <p>Nairobi, Kenya</p>
               </div>
             </div>
-            <!--End of col-md-4-->
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 zero_mp">
+           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 zero_mp">
               <div class="phone">
                 <i class="fa fa-phone floatleft"></i>
                 <p>+254 728976963</p>
               </div>
             </div>
-            <!--End of col-md-4-->
             <div class="col-md-4">
               <div class="social_icon text-right">
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -66,12 +64,11 @@
                 <a href=""><i class="fa fa-youtube"></i></a>
               </div>
             </div>
-            <!--End of col-md-4-->
           </div>
           <!--End of row-->
         </div>
         <!--End of container-->
-      </div>
+       </div>
       <!--End of top header-->
       <div class="header_menu text-center" data-spy="affix" data-offset-top="50" id="nav">
         <div class="container">
@@ -85,7 +82,11 @@
                                     <span class="icon-bar"></span>
                                 </button>
               <a class="navbar-brand custom_navbar-brand" href="#">
-                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">BLAYBERG</h3>
+                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">
+                  <a href="#header">
+                      BLAYBERG
+                  </a>
+                  </h3>
               </a>
             </div>
             <!--End of navbar-header-->
@@ -96,8 +97,8 @@
                 <li class="active"><a href="#header">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="#welcome">about us</a></li>
                 <li><a href="#counter">Our services</a></li>
-                <li><a href="#blog">our partners</a></li>
-                <li><a href="#portfolio">resources</a></li>
+                <li><a href="#blog">resources</a></li>
+                <li><a href="#portfolio">our partners</a></li>
                 <li><a href="#volunteer">join us</a></li>
                 <li><a href="#contact">contact us</a></li>
               </ul>
@@ -115,7 +116,9 @@
   <!--End of Hedaer Section-->
 
 
+  <section>
 
+  </section>
   <!--Start of slider section-->
   <section id="slider">
     <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
@@ -255,8 +258,6 @@
 
 
 
-  <!--Start of portfolio-->
-
 
   <!--Start of counter-->
   <section id="counter">
@@ -266,7 +267,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="counter_header">
               <h2>OUR services</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>We provide innovative solutions to our customers to ensure that they get maximum value on their investments.</p>
             </div>
           </div>
           <!--End of col-md-12-->
@@ -276,10 +277,10 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/tree.png" alt="">
+                <img src="img/SMS.png" alt="">
                 <div class="counter_text">
-                  <span class="counter">1542</span>
-                  <p>tree cut</p>
+                  <span class="counter">10000</span>
+                  <p>Daily Farming tips sent to farmers</p>
                 </div>
               </div>
             </div>
@@ -324,9 +325,6 @@
     </div>
   </section>
   <!--end of counter-->
-  <section>
-
-  </section>
 
   <!--Start of blog-->
   <section id="blog">
@@ -334,7 +332,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="latest_blog text-center">
-            <h2>our partners</h2>
+            <h2>Resources</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo cum libero vitae quos eaque commodi.</p>
           </div>
         </div>
@@ -437,44 +435,10 @@
   <section id="portfolio" class="text-center">
     <div class="col-md-12">
       <div class="portfolio_title">
-        <h2>our services</h2>
+        <h2>our partners</h2>
         <p></p>
       </div>
     </div>
-    <!--End of col-md-2-->
-    <div class="colum">
-      <div class="container">
-        <div class="row">
-          <form action="/">
-            <ul id="portfolio_menu" class="menu portfolio_custom_menu">
-              <li>
-                <button data-filter="*" class="my_btn btn_active">Show All</button>
-              </li>
-              <li>
-                <button data-filter=".blue, .black, .green" class="my_btn">environment</button>
-              </li>
-              <li>
-                <button data-filter=".red, .green" class="my_btn">climate</button>
-              </li>
-              <li>
-                <button data-filter=".blue, .yellow, .black" class="my_btn">photography</button>
-              </li>
-              <li>
-                <button data-filter=".black" class="my_btn">species</button>
-                <!--
-                                </li>
-                                <li>
-                                    <button data-filter=".black" class="my_btn">Black</button>
-                                </li>
-                                    -->
-            </ul>
-            <!--End of portfolio_menu-->
-          </form>
-          <!--End of Form-->
-        </div>
-        <!--End of row-->
-      </div>
-      <!--End of container-->
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -663,9 +627,6 @@
   <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
   <!--End of Scroll to top-->
 
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
   <script src="js/jquery-1.12.3.min.js"></script>
 
   <!--Counter UP Waypoint-->
@@ -680,53 +641,6 @@
       time: 1000
     });
   </script>
-
-  <!--Gmaps-->
-  <!-- <script src="js/gmaps.min.js"></script>
-        <script type="text/javascript">
-            var map;
-            $(document).ready(function () {
-                map = new GMaps({
-                    el: '#map',
-                    lat: 23.6911078,
-                    lng: 90.5112799,
-                    zoomControl: true,
-                    zoomControlOpt: {
-                        style: 'SMALL',
-                        position: 'LEFT_BOTTOM'
-                    },
-                    panControl: false,
-                    streetViewControl: false,
-                    mapTypeControl: false,
-                    overviewMapControl: false,
-                    scrollwheel: false,
-                });
-
-
-                map.addMarker({
-                    lat: 23.6911078,
-                    lng: 90.5112799,
-                    title: 'Office',
-                    details: {
-                        database_id: 42,
-                        author: 'Foysal'
-                    },
-                    click: function (e) {
-                        if (console.log)
-                            console.log(e);
-                        alert('You clicked in this marker');
-                    },
-                    mouseover: function (e) {
-                        if (console.log)
-                            console.log(e);
-                    }
-                });
-            });
-        </script> -->
-  <!--Google Maps API-->
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxvF9oTfcziZWw--3phPVx1ztAsyhXL4"></script> -->
-
-
   <!--Isotope-->
   <script src="js/isotope/min/scripts-min.js"></script>
   <script src="js/isotope/cells-by-row.js"></script>
@@ -742,12 +656,13 @@
   <!--JQuery Click to Scroll down with Menu-->
   <script src="js/jquery.localScroll.min.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
+
   <!--WOW With Animation-->
   <script src="js/wow.min.js"></script>
   <!--WOW Activated-->
-  <script>
+  <!-- <script>
     new WOW().init();
-  </script>
+  </script> -->
 
 
   <!-- Include all compiled plugins (below), or include individual files as needed -->
