--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                 <p>Nairobi, Kenya</p>
               </div>
             </div>
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 zero_mp">
+            <!--End of col-md-4-->
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 zero_mp">
               <div class="phone">
                 <i class="fa fa-phone floatleft"></i>
                 <p>+254 728976963</p>
               </div>
             </div>
+            <!--End of col-md-4-->
             <div class="col-md-4">
               <div class="social_icon text-right">
                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -64,11 +66,12 @@
                 <a href=""><i class="fa fa-youtube"></i></a>
               </div>
             </div>
+            <!--End of col-md-4-->
           </div>
           <!--End of row-->
         </div>
         <!--End of container-->
-       </div>
+      </div>
       <!--End of top header-->
       <div class="header_menu text-center" data-spy="affix" data-offset-top="50" id="nav">
         <div class="container">
@@ -82,11 +85,7 @@
                                     <span class="icon-bar"></span>
                                 </button>
               <a class="navbar-brand custom_navbar-brand" href="#">
-                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">
-                  <a href="#header">
-                      BLAYBERG
-                  </a>
-                  </h3>
+                <h3 style="font-family: 'Poor Story', cursive; font-weight:bolder; font-color:rgb(92, 145, 98)">BLAYBERG</h3>
               </a>
             </div>
             <!--End of navbar-header-->
@@ -97,8 +96,8 @@
                 <li class="active"><a href="#header">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="#welcome">about us</a></li>
                 <li><a href="#counter">Our services</a></li>
-                <li><a href="#blog">resources</a></li>
-                <li><a href="#portfolio">our partners</a></li>
+                <li><a href="#blog">our partners</a></li>
+                <li><a href="#portfolio">resources</a></li>
                 <li><a href="#volunteer">join us</a></li>
                 <li><a href="#contact">contact us</a></li>
               </ul>
@@ -116,9 +115,7 @@
   <!--End of Hedaer Section-->
 
 
-  <section>
 
-  </section>
   <!--Start of slider section-->
   <section id="slider">
     <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
@@ -258,6 +255,8 @@
 
 
 
+  <!--Start of portfolio-->
+
 
   <!--Start of counter-->
   <section id="counter">
@@ -267,7 +266,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="counter_header">
               <h2>OUR services</h2>
-              <p>We provide innovative solutions to our customers to ensure that they get maximum value on their investments.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <!--End of col-md-12-->
@@ -277,10 +276,10 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/SMS.png" alt="">
+                <img src="img/tree.png" alt="">
                 <div class="counter_text">
-                  <span class="counter">10000</span>
-                  <p>Daily Farming tips sent to farmers</p>
+                  <span class="counter">1542</span>
+                  <p>tree cut</p>
                 </div>
               </div>
             </div>
@@ -325,6 +324,9 @@
     </div>
   </section>
   <!--end of counter-->
+  <section>
+
+  </section>
 
   <!--Start of blog-->
   <section id="blog">
@@ -332,7 +334,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="latest_blog text-center">
-            <h2>Resources</h2>
+            <h2>our partners</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo cum libero vitae quos eaque commodi.</p>
           </div>
         </div>
@@ -435,10 +437,44 @@
   <section id="portfolio" class="text-center">
     <div class="col-md-12">
       <div class="portfolio_title">
-        <h2>our partners</h2>
+        <h2>our services</h2>
         <p></p>
       </div>
     </div>
+    <!--End of col-md-2-->
+    <div class="colum">
+      <div class="container">
+        <div class="row">
+          <form action="/">
+            <ul id="portfolio_menu" class="menu portfolio_custom_menu">
+              <li>
+                <button data-filter="*" class="my_btn btn_active">Show All</button>
+              </li>
+              <li>
+                <button data-filter=".blue, .black, .green" class="my_btn">environment</button>
+              </li>
+              <li>
+                <button data-filter=".red, .green" class="my_btn">climate</button>
+              </li>
+              <li>
+                <button data-filter=".blue, .yellow, .black" class="my_btn">photography</button>
+              </li>
+              <li>
+                <button data-filter=".black" class="my_btn">species</button>
+                <!--
+                                </li>
+                                <li>
+                                    <button data-filter=".black" class="my_btn">Black</button>
+                                </li>
+                                    -->
+            </ul>
+            <!--End of portfolio_menu-->
+          </form>
+          <!--End of Form-->
+        </div>
+        <!--End of row-->
+      </div>
+      <!--End of container-->
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -627,6 +663,9 @@
   <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
   <!--End of Scroll to top-->
 
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
   <script src="js/jquery-1.12.3.min.js"></script>
 
   <!--Counter UP Waypoint-->
@@ -641,6 +680,53 @@
       time: 1000
     });
   </script>
+
+  <!--Gmaps-->
+  <!-- <script src="js/gmaps.min.js"></script>
+        <script type="text/javascript">
+            var map;
+            $(document).ready(function () {
+                map = new GMaps({
+                    el: '#map',
+                    lat: 23.6911078,
+                    lng: 90.5112799,
+                    zoomControl: true,
+                    zoomControlOpt: {
+                        style: 'SMALL',
+                        position: 'LEFT_BOTTOM'
+                    },
+                    panControl: false,
+                    streetViewControl: false,
+                    mapTypeControl: false,
+                    overviewMapControl: false,
+                    scrollwheel: false,
+                });
+
+
+                map.addMarker({
+                    lat: 23.6911078,
+                    lng: 90.5112799,
+                    title: 'Office',
+                    details: {
+                        database_id: 42,
+                        author: 'Foysal'
+                    },
+                    click: function (e) {
+                        if (console.log)
+                            console.log(e);
+                        alert('You clicked in this marker');
+                    },
+                    mouseover: function (e) {
+                        if (console.log)
+                            console.log(e);
+                    }
+                });
+            });
+        </script> -->
+  <!--Google Maps API-->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxvF9oTfcziZWw--3phPVx1ztAsyhXL4"></script> -->
+
+
   <!--Isotope-->
   <script src="js/isotope/min/scripts-min.js"></script>
   <script src="js/isotope/cells-by-row.js"></script>
@@ -656,13 +742,12 @@
   <!--JQuery Click to Scroll down with Menu-->
   <script src="js/jquery.localScroll.min.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
-
   <!--WOW With Animation-->
   <script src="js/wow.min.js"></script>
   <!--WOW Activated-->
-  <!-- <script>
+  <script>
     new WOW().init();
-  </script> -->
+  </script>
 
 
   <!-- Include all compiled plugins (below), or include individual files as needed -->
