Finish the website...

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <li class="active"><a href="#header">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="#welcome">about us</a></li>
                 <li><a href="#counter">Our services</a></li>
-                <li><a href="#blog">our partners</a></li>
-                <li><a href="#portfolio">resources</a></li>
+                <li><a href="#blog">resources</a></li>
+                <li><a href="#portfolio">gallery</a></li>
                 <li><a href="#volunteer">join us</a></li>
                 <li><a href="#contact">contact us</a></li>
               </ul>
@@ -266,7 +266,6 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="counter_header">
               <h2>OUR services</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <!--End of col-md-12-->
@@ -276,10 +275,11 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/tree.png" alt="">
+                <!-- <img src="img/training.png" alt="" style="height:200px"> -->
+                <i class="fa fa-graduation-cap" aria-hidden="true" style="font-size:10em; margin-top:10px"></i>
                 <div class="counter_text">
-                  <span class="counter">1542</span>
-                  <p>tree cut</p>
+                  <!-- <span class="counter"></span> -->
+                  <p style="font-weight:bolder; font-size:2em; margin-top:70px">Farmer Trainings</p>
                 </div>
               </div>
             </div>
@@ -287,10 +287,11 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/hand.png" alt="">
+                <!-- <img src="img/hand.png" alt=""> -->
+                <i class="far fa-envelope" style="font-size:8em; margin-top:10px"></i>
                 <div class="counter_text">
-                  <span class="counter">1458</span>
-                  <p>animal lost</p>
+                  <!-- <span class="counter"></span> -->
+                  <p style="font-weight:bolder; font-size:2em; margin-top:70px">SMS Notification Services</p>
                 </div>
               </div>
             </div>
@@ -298,10 +299,11 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/tuhnder.png" alt="">
+                <i style="font-size:10em; margin-top:10px" class="fa">&#xf080;</i>
+                <!-- <img src="img/tuhnder.png" alt=""> -->
                 <div class="counter_text">
-                  <span class="counter">9854</span>
-                  <p>blubs collected</p>
+                  <!-- <span class="counter"></span> -->
+                  <p style="font-weight:bolder; font-size:2em; margin-top:80px">Business Planning</p>
                 </div>
               </div>
             </div>
@@ -309,10 +311,11 @@
           <div class="col-md-3">
             <div class="counter_item text-center">
               <div class="sigle_counter_item">
-                <img src="img/cloud.png" alt="">
+                <i style="font-size:10em; margin-top:10px" class="fa">&#xf09d;</i>
+                <!-- <img src="img/cloud.png" alt=""> -->
                 <div class="counter_text">
-                  <span class="counter">5412</span>
-                  <p>water level</p>
+                  <!-- <span class="counter"></span> -->
+                  <p style="font-weight:bolder; font-size:2em; margin-top:80px">Payment Service</p>
                 </div>
               </div>
             </div>
@@ -334,8 +337,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="latest_blog text-center">
-            <h2>our partners</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo cum libero vitae quos eaque commodi.</p>
+            <h2>Resources</h2>
           </div>
         </div>
       </div>
@@ -345,26 +347,14 @@
           <div class="blog_news">
             <div class="single_blog_item">
               <div class="blog_img">
-                <img src="img/climate_effect.jpg" alt="">
+                <iframe src="https://www.youtube.com/embed/obsLwew-NT0" width="100%"; height="200px"></iframe>
               </div>
               <div class="blog_content">
-                <a href=""><h3>Climate change is affecting bird migration</h3></a>
-                <div class="expert">
-                  <div class="left-side text-left">
-                    <p class="left_side">
-                      <span class="clock"><i class="fa fa-clock-o"></i></span>
-                      <span class="time">Aug 19, 2016</span>
-                      <a href=""><span class="admin"><i class="fa fa-user"></i> Admin</span></a>
-                    </p>
-                    <p class="right_side text-right">
-                      <a href=""><span class="right_msg text-right"><i class="fa fa-comments-o"></i></span>
-                                                    <span class="count">0</span></a>
-                    </p>
-                  </div>
-                </div>
-
-                <p class="blog_news_content">Lorem ipsum dolor sit amet, consectetur adipscing elit. Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. consectetur Lorem ipsum dolor sitamet, conse ctetur adipiscing elit. </p>
-                <a href="" class="blog_link">read more</a>
+                <a href=""><h3>Greenhouse Tomatoes</h3></a>
+                <p class="blog_news_content">Every farmer looks for tricks to better tomato farming in Kenya. Most Kenyan farmers started with tomato farms having been told of the huge profits in the market.
+                   The truth sometimes is hard to bear as a lot of us,
+                   small scale farmers  have lost fortunes in tomato farming Kenya .... </p>
+                <a href="https://softkenya.com/kenya/tomato-farming-in-kenya/" class="blog_link">more tips</a>
               </div>
             </div>
           </div>
@@ -374,26 +364,16 @@
           <div class="blog_news">
             <div class="single_blog_item">
               <div class="blog_img">
-                <img src="img/air_pollutuon.jpg" alt="">
+                <iframe src="https://www.youtube.com/embed/7UxTpf-6G20" width="100%"; height="200px"></iframe>
               </div>
               <div class="blog_content">
-                <a href=""><h3>How to avoid indoor air pollution?</h3></a>
-                <div class="expert">
-                  <div class="left-side text-left">
-                    <p class="left_side">
-                      <span class="clock"><i class="fa fa-clock-o"></i></span>
-                      <span class="time">Aug 19, 2016</span>
-                      <a href=""><span class="admin"><i class="fa fa-user"></i> Admin</span></a>
-                    </p>
-                    <p class="right_side text-right">
-                      <a href=""><span class="right_msg text-right"><i class="fa fa-comments-o"></i></span>
-                                                    <span class="count">0</span></a>
-                    </p>
-                  </div>
-                </div>
+                <a href=""><h3>Capsicum Cultivation</h3></a>
 
-                <p class="blog_news_content">Lorem ipsum dolor sit amet, consectetur adipscing elit. Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. consectetur Lorem ipsum dolor sitamet, conse ctetur adipiscing elit. </p>
-                <a href="" class="blog_link">read more</a>
+                <p class="blog_news_content">
+                Capsicum (called pilipili hoho in Kenya) are a hardy type of plant. It is rarely attacked by diseases or pests though it still needs proper preventive care. Capsicum
+                 farming in Kenya does best in hot areas the likes of the greater Eastern Province,
+                  Coastal region, temperate central areas etc.</p>
+                <a href="https://softkenya.com/kenya/capsicum-farming-in-kenya/" class="blog_link">more tips</a>
               </div>
             </div>
           </div>
@@ -403,26 +383,15 @@
           <div class="blog_news">
             <div class="single_blog_item">
               <div class="blog_img">
-                <img src="img/threat_bear.jpg" alt="">
+                <iframe src="https://www.youtube.com/embed/Vy72pRX6hJw" width="100%"; height="200px"></iframe>
               </div>
               <div class="blog_content">
-                <a href=""><h3>Threat to Yellowstone’s grizzly bears.</h3></a>
-                <div class="expert">
-                  <div class="left-side text-left">
-                    <p class="left_side">
-                      <span class="clock"><i class="fa fa-clock-o"></i></span>
-                      <span class="time">Aug 19, 2016</span>
-                      <a href=""><span class="admin"><i class="fa fa-user"></i> Admin</span></a>
-                    </p>
-                    <p class="right_side text-right">
-                      <a href=""><span class="right_msg text-right"><i class="fa fa-comments-o"></i></span>
-                                                    <span class="count">0</span></a>
-                    </p>
-                  </div>
-                </div>
-
-                <p class="blog_news_content">Lorem ipsum dolor sit amet, consectetur adipscing elit. Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. consectetur Lorem ipsum dolor sitamet, conse ctetur adipiscing elit. </p>
-                <a href="" class="blog_link">read more</a>
+                <a href=""><h3>Low Cost Greenhouse</h3></a>
+                <p class="blog_news_content">Greenhouse farming in Kenya is a type of
+                  farming where plants are grown in a covered structure with PVC
+                   paper on the roof for ventilation purposes, a net-like material is used on
+                   the sides. This makes sure that the air circulation is good... </p>
+                <a href="https://softkenya.com/kenya/greenhouse-farming-in-kenya/" class="blog_link">more tips</a>
               </div>
             </div>
           </div>
@@ -437,7 +406,7 @@
   <section id="portfolio" class="text-center">
     <div class="col-md-12">
       <div class="portfolio_title">
-        <h2>our services</h2>
+        <h2>Gallery</h2>
         <p></p>
       </div>
     </div>
@@ -451,22 +420,16 @@
                 <button data-filter="*" class="my_btn btn_active">Show All</button>
               </li>
               <li>
-                <button data-filter=".blue, .black, .green" class="my_btn">environment</button>
+                <button data-filter=".capsicum" class="my_btn">Capsicum</button>
               </li>
               <li>
-                <button data-filter=".red, .green" class="my_btn">climate</button>
+                <button data-filter=".grapes" class="my_btn">grapes</button>
               </li>
               <li>
-                <button data-filter=".blue, .yellow, .black" class="my_btn">photography</button>
+                <button data-filter=".dairy" class="my_btn">dairy</button>
               </li>
               <li>
-                <button data-filter=".black" class="my_btn">species</button>
-                <!--
-                                </li>
-                                <li>
-                                    <button data-filter=".black" class="my_btn">Black</button>
-                                </li>
-                                    -->
+                <button data-filter=".greenhouse" class="my_btn">Greenhouse</button>
             </ul>
             <!--End of portfolio_menu-->
           </form>
@@ -479,35 +442,38 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="notes">
-              <div class="note blue">
+              <div class="note capsicum">
                 <div class="img_overlay">
-                  <p>Sun Homes, Dhaka</p>
+                  <p>capsicum</p>
                 </div>
-                <img src="img/environment.jpg" alt="">
+                <img src="img/capsicum1.jpg" alt="" style="height:200px;width:220px">
               </div>
-              <div class="note red">
-                <div class="img_overlay">
-                  <p>Sun Homes, Dhaka</p>
-                </div>
-                <img src="img/portfolio_1.jpg" alt="">
+              <div class="note capsicum">
+                <img src="img/capsicum2.jpg" alt="" style="height:200px;width:220px">
               </div>
-              <div class="note green">
-                <div class="img_overlay">
-                  <p>Sun Homes, Dhaka</p>
-                </div>
-                <img src="img/cliemate.jpg" alt="">
+              <div class="note grapes">
+                <img src="img/grapes.jpg" alt="" style="height:200px;width:220px">
               </div>
-              <div class="note yellow">
-                <div class="img_overlay">
-                  <p>Sun Homes, Dhaka</p>
-                </div>
-                <img src="img/photography.jpg" alt="">
+              <div class="note grapes">
+                <img src="img/grapes1.jpg" alt="" style="height:200px;width:220px">
               </div>
-              <div class="note black">
-                <div class="img_overlay">
-                  <p>Sun Homes, Dhaka</p>
-                </div>
-                <img src="img/species.jpg" alt="">
+              <div class="note dairy">
+                <img src="img/dairy.jpg" alt="" style="height:200px;width:220px">
+              </div>
+              <div class="note dairy">
+                <img src="img/dairy1.jpg" alt="" style="height:200px;width:220px">
+              </div>
+              <div class="note dairy">
+                <img src="img/dairy2.jpg" alt="" style="height:200px;width:220px">
+              </div>
+              <div class="note greenhouse">
+                <img src="img/greenhouse.jpg" alt="" style="height:200px;width:220px">
+              </div>
+              <div class="note greenhouse">
+                <img src="img/greenhouse1.jpg" alt="" style="height:200px;width:220px">
+              </div>
+              <div class="note greenhouse">
+                <img src="img/greenhouse4.jpg" alt="" style="height:200px;width:220px">
               </div>
             </div>
             <!--End of notes-->
@@ -534,7 +500,7 @@
         <!--End of col-md-8-->
         <div class="col-md-3 col-md-offset-1">
           <div class="join_us">
-            <a href="" class="vol_cust_btn">careers</a>
+            <a href="#contact" class="vol_cust_btn">careers</a>
           </div>
         </div>
         <!--End of col-md-3-->
@@ -553,7 +519,7 @@
         <!--End of col-md-8-->
         <div class="col-md-3 col-md-offset-1">
           <div class="join_us">
-            <a href="" class="vol_cust_btn">partners</a>
+            <a href="#contact" class="vol_cust_btn">partners</a>
           </div>
         </div>
         <!--End of col-md-3-->
@@ -579,11 +545,11 @@
         <div class="col-md-6">
           <div class="office">
             <div class="title">
-              <h5>our office info</h5>
+              <h5>our info</h5>
             </div>
             <div class="office_location">
               <div class="address">
-                <i class="fa fa-map-marker"><span>5th Floor, Dunhill Towers, Waiyaki Way, Westlands</span></i>
+                <!-- <i class="fa fa-map-marker"><span>5th Floor, Dunhill Towers, Waiyaki Way, Westlands</span></i> -->
               </div>
               <div class="phone">
                 <i class="fa fa-phone"><span>+254 728976963</span></i>
@@ -603,13 +569,13 @@
               <!-- CONTACT FORM -->
               <div class="contact-form wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
                 <div id="message"></div>
-                <form action="scripts/contact.php" class="form-horizontal contact-1" role="form" name="contactform" id="contactform">
+                <form action="https://formspree.io/biinewtondev@gmail.com" class="form-horizontal contact-1" method="post">
                   <div class="form-group">
                     <div class="col-sm-6">
                       <input type="text" class="form-control" name="name" id="name" placeholder="Name">
                     </div>
                     <div class="col-sm-6">
-                      <input type="text" class="form-control" name="email" id="email" placeholder="Email">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Email">
                     </div>
                   </div>
                   <div class="form-group">
